Fix overflow table

--- a/official_version/public/styles/style.css
+++ b/official_version/public/styles/style.css
@@ -161,7 +161,26 @@ header {
 #transaction {
     display: block;
     width: 100%;
-    overflow: hidden auto;
+    overflow: auto;
+}
+
+#transaction::-webkit-scrollbar {
+    height: 7px;
+    cursor: pointer;
+}
+
+#transaction::-webkit-scrollbar-thumb {
+    border-radius: 12px;
+    border: 4px solid var(--background);
+    background: rgba(0, 0, 0, .2);
+}
+
+#transaction::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, .25);
+}
+
+#transaction::-webkit-scrollbar-track {
+    background: var(--background);
 }
 
 #transaction div {
